Linear_Regression.ipynb

--- a/Linear_Regression.ipynb
+++ b/Linear_Regression.ipynb
@@ -6,9 +6,9 @@
     "id": "fitv0OOcAwUV"
    },
    "source": [
-    "# TP: Machine Learning\n",
+    "#  Machine Learning\n",
     "\n",
-    "## TP1: Linear Regression (4h)  \n",
+    "##  Linear Regression (4h)  \n",
     "\n",
     "Linear regression is a family of machine learning algorithms aiming at adjusting a linear model to an ensemble of data. The applications range from signal reconstruction to empirical description.\n",
     "\n",
