Linear_Regression.ipynb

--- a/Linear_Regression.ipynb
+++ b/Linear_Regression.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "#  Machine Learning\n",
     "\n",
-    "##  Linear Regression (4h)  \n",
+    "##  Linear Regression   \n",
     "\n",
     "Linear regression is a family of machine learning algorithms aiming at adjusting a linear model to an ensemble of data. The applications range from signal reconstruction to empirical description.\n",
     "\n",
