Data_Classification.ipynb

--- a/Data_Classification.ipynb
+++ b/Data_Classification.ipynb
@@ -6,9 +6,9 @@
     "id": "vLsensyrZsJS"
    },
    "source": [
-    "# TP: Machine Learning\n",
+    "# Machine Learning\n",
     "\n",
-    "## TP2: Classification (4h) \n",
+    "##  Classification  \n",
     "\n",
     "In machine learning, classification is related to supervised learning approaches in which the algorithm fits from an annotated set of data. This learning phase is followed by a validation phase to evaluate the classification model through several metrics. Once the model is correctly validated, a generalization phase is used to classify new data.\n",
     "\n",
